[gd_scene load_steps=5 format=3 uid="uid://bkum14eby8k7i"]

[ext_resource type="Script" uid="uid://dk6madjynfipp" path="res://scripts/algae.gd" id="1_4s5ym"]
[ext_resource type="Texture2D" uid="uid://bdokbuxx1vfs5" path="res://assets/algae.png" id="1_8gw3g"]
[ext_resource type="Script" uid="uid://bycubtbusx4jl" path="res://scripts/health_component.gd" id="2_tn3er"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4s5ym"]
size = Vector2(32, 32)

[node name="Algae" type="Area2D" node_paths=PackedStringArray("health") groups=["Food"]]
z_index = -2
collision_layer = 4
collision_mask = 0
script = ExtResource("1_4s5ym")
health = NodePath("healthComponent")

[node name="healthComponent" type="Node2D" parent="."]
position = Vector2(0, 10)
script = ExtResource("2_tn3er")
maxHealth = 10
metadata/_custom_type_script = "uid://bycubtbusx4jl"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -6)
texture = ExtResource("1_8gw3g")
hframes = 2

[node name="coolDownTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 15.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_4s5ym")

[connection signal="timeout" from="coolDownTimer" to="." method="_on_cool_down_timer_timeout"]
